--- a/01-GoogleMaps/01-adding_the_map_element/interests.html
+++ b/01-GoogleMaps/01-adding_the_map_element/interests.html
@@ -58,6 +58,8 @@
                     </div>
                 </div>
                 <div id="map"></div>
+
+
             </div>
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-groups section-column">
                 <div class="row">
@@ -192,6 +194,23 @@
             </div>
         </div>
     </footer>
+    <script>
+        function initMap() {
+            var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 3,
+            center: {
+                lat: 46.619261 ,
+                lng: -33.134766
+            } 
+            } )
+        }
+
+    </script>
+
+<script src="assets/js/maps.js"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf_JEIHoQJzldb6SDAW4Z-0owjZI5Am2k&callback=initMap"></script>
+      
 </body>
 
 </html>
